feat(FE): Created CSV Profiles

--- a/data_format1/Category Profile.ipynb
+++ b/data_format1/Category Profile.ipynb
@@ -870,13 +870,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9870/2069626344.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/2069626344.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_cat['cat action count'] = -1\n",
-      "/tmp/ipykernel_9870/2069626344.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/2069626344.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1156,7 +1156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9870/2509590662.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/2509590662.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1857,13 +1857,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9870/3830393506.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/3830393506.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_cat['cat 1111 action count'] = 0\n",
-      "/tmp/ipykernel_9870/3830393506.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/3830393506.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2062,7 +2062,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9870/934831560.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/934831560.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2970,13 +2970,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9870/553739240.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/553739240.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_cat['cat last week action count'] = 0\n",
-      "/tmp/ipykernel_9870/553739240.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11263/553739240.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -12718,7 +12718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "id": "5ee6193e",
    "metadata": {},
    "outputs": [
@@ -12737,7 +12737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "id": "b8433b60",
    "metadata": {},
    "outputs": [
@@ -12774,15 +12774,15 @@
        "      <th>cat last week activity ratio</th>\n",
        "      <th>...</th>\n",
        "      <th>cat_unknown_buy_ratio</th>\n",
-       "      <th>ageGroup_1_counts</th>\n",
-       "      <th>ageGroup_2_counts</th>\n",
-       "      <th>ageGroup_3_counts</th>\n",
-       "      <th>ageGroup_4_counts</th>\n",
-       "      <th>ageGroup_5_counts</th>\n",
-       "      <th>ageGroup_6_counts</th>\n",
-       "      <th>ageGroup_7_counts</th>\n",
-       "      <th>ageGroup_8_counts</th>\n",
-       "      <th>ageGroup_0_counts</th>\n",
+       "      <th>cat_ageGroup_1_counts</th>\n",
+       "      <th>cat_ageGroup_2_counts</th>\n",
+       "      <th>cat_ageGroup_3_counts</th>\n",
+       "      <th>cat_ageGroup_4_counts</th>\n",
+       "      <th>cat_ageGroup_5_counts</th>\n",
+       "      <th>cat_ageGroup_6_counts</th>\n",
+       "      <th>cat_ageGroup_7_counts</th>\n",
+       "      <th>cat_ageGroup_8_counts</th>\n",
+       "      <th>cat_ageGroup_0_counts</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -13108,62 +13108,62 @@
        "383                          0.050704                      1.000000  ...   \n",
        "384                          0.284507                      0.961905  ...   \n",
        "\n",
-       "     cat_unknown_buy_ratio  ageGroup_1_counts  ageGroup_2_counts  \\\n",
-       "0                      0.0                  0                  2   \n",
-       "1                      0.0                  0                  2   \n",
-       "2                      0.0                  0                  2   \n",
-       "3                      0.0                  0                  2   \n",
-       "4                      0.0                  0                  2   \n",
-       "..                     ...                ...                ...   \n",
-       "380                    0.0                  0                 25   \n",
-       "381                    0.0                  0                 25   \n",
-       "382                    0.0                  0                 25   \n",
-       "383                    0.0                  0                 10   \n",
-       "384                    0.0                  0                 25   \n",
+       "     cat_unknown_buy_ratio  cat_ageGroup_1_counts  cat_ageGroup_2_counts  \\\n",
+       "0                      0.0                      0                      2   \n",
+       "1                      0.0                      0                      2   \n",
+       "2                      0.0                      0                      2   \n",
+       "3                      0.0                      0                      2   \n",
+       "4                      0.0                      0                      2   \n",
+       "..                     ...                    ...                    ...   \n",
+       "380                    0.0                      0                     25   \n",
+       "381                    0.0                      0                     25   \n",
+       "382                    0.0                      0                     25   \n",
+       "383                    0.0                      0                     10   \n",
+       "384                    0.0                      0                     25   \n",
        "\n",
-       "     ageGroup_3_counts  ageGroup_4_counts  ageGroup_5_counts  \\\n",
-       "0                    1                 10                  7   \n",
-       "1                    1                 10                  7   \n",
-       "2                    1                 10                  7   \n",
-       "3                    1                 10                  7   \n",
-       "4                    1                 10                  7   \n",
-       "..                 ...                ...                ...   \n",
-       "380                 24                 35                  1   \n",
-       "381                 24                 35                  1   \n",
-       "382                 24                 35                  1   \n",
-       "383                  0                  6                  0   \n",
-       "384                 24                 35                  1   \n",
+       "     cat_ageGroup_3_counts  cat_ageGroup_4_counts  cat_ageGroup_5_counts  \\\n",
+       "0                        1                     10                      7   \n",
+       "1                        1                     10                      7   \n",
+       "2                        1                     10                      7   \n",
+       "3                        1                     10                      7   \n",
+       "4                        1                     10                      7   \n",
+       "..                     ...                    ...                    ...   \n",
+       "380                     24                     35                      1   \n",
+       "381                     24                     35                      1   \n",
+       "382                     24                     35                      1   \n",
+       "383                      0                      6                      0   \n",
+       "384                     24                     35                      1   \n",
        "\n",
-       "     ageGroup_6_counts  ageGroup_7_counts  ageGroup_8_counts  \\\n",
-       "0                    8                  0                  0   \n",
-       "1                    8                  0                  0   \n",
-       "2                    8                  0                  0   \n",
-       "3                    8                  0                  0   \n",
-       "4                    8                  0                  0   \n",
-       "..                 ...                ...                ...   \n",
-       "380                  3                  0                  0   \n",
-       "381                  3                  0                  0   \n",
-       "382                  3                  0                  0   \n",
-       "383                  0                  0                  0   \n",
-       "384                  3                  0                  0   \n",
+       "     cat_ageGroup_6_counts  cat_ageGroup_7_counts  cat_ageGroup_8_counts  \\\n",
+       "0                        8                      0                      0   \n",
+       "1                        8                      0                      0   \n",
+       "2                        8                      0                      0   \n",
+       "3                        8                      0                      0   \n",
+       "4                        8                      0                      0   \n",
+       "..                     ...                    ...                    ...   \n",
+       "380                      3                      0                      0   \n",
+       "381                      3                      0                      0   \n",
+       "382                      3                      0                      0   \n",
+       "383                      0                      0                      0   \n",
+       "384                      3                      0                      0   \n",
        "\n",
-       "     ageGroup_0_counts  \n",
-       "0                    8  \n",
-       "1                    8  \n",
-       "2                    8  \n",
-       "3                    8  \n",
-       "4                    8  \n",
-       "..                 ...  \n",
-       "380                 17  \n",
-       "381                 17  \n",
-       "382                 17  \n",
-       "383                  2  \n",
-       "384                 17  \n",
+       "     cat_ageGroup_0_counts  \n",
+       "0                        8  \n",
+       "1                        8  \n",
+       "2                        8  \n",
+       "3                        8  \n",
+       "4                        8  \n",
+       "..                     ...  \n",
+       "380                     17  \n",
+       "381                     17  \n",
+       "382                     17  \n",
+       "383                      2  \n",
+       "384                     17  \n",
        "\n",
        "[385 rows x 46 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13179,19 +13179,22 @@
     "ageGroup_6_counts = df.groupby(['cat_id'])['age_range'].apply(lambda x: (x == 6).sum())\n",
     "ageGroup_7_counts = df.groupby(['cat_id'])['age_range'].apply(lambda x: (x == 7).sum())\n",
     "ageGroup_8_counts = df.groupby(['cat_id'])['age_range'].apply(lambda x: (x == 8).sum())\n",
-    "gender_total_cat_counts = pd.DataFrame({'ageGroup_1_counts': ageGroup_1_counts,'ageGroup_2_counts': ageGroup_2_counts,'ageGroup_3_counts': ageGroup_3_counts,'ageGroup_4_counts': ageGroup_4_counts,'ageGroup_5_counts': ageGroup_5_counts,\n",
-    "                                          'ageGroup_6_counts': ageGroup_6_counts,'ageGroup_7_counts': ageGroup_7_counts,'ageGroup_8_counts': ageGroup_8_counts, 'ageGroup_0_counts': ageGroup_0_counts})\n",
+    "gender_total_cat_counts = pd.DataFrame({'cat_ageGroup_1_counts': ageGroup_1_counts,'cat_ageGroup_2_counts': ageGroup_2_counts,'cat_ageGroup_3_counts': ageGroup_3_counts,'cat_ageGroup_4_counts': ageGroup_4_counts,'cat_ageGroup_5_counts': ageGroup_5_counts,\n",
+    "                                          'cat_ageGroup_6_counts': ageGroup_6_counts,'cat_ageGroup_7_counts': ageGroup_7_counts,'cat_ageGroup_8_counts': ageGroup_8_counts, 'cat_ageGroup_0_counts': ageGroup_0_counts})\n",
     "df_cat = df_cat.join(gender_total_cat_counts, on='cat_id')\n",
     "df_cat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "ccfc8bfe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "df_cat.to_csv('category_profile.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
