--- a/data_format1/Merchant Profile.ipynb
+++ b/data_format1/Merchant Profile.ipynb
@@ -894,13 +894,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8592/345860918.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/345860918.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_merchant['merchant action count'] = -1\n",
-      "/tmp/ipykernel_8592/345860918.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/345860918.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1182,7 +1182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8592/3594710395.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/3594710395.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1549,7 +1549,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8592/1602293768.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/1602293768.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2287,13 +2287,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8592/3269018672.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/3269018672.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_merchant['merchant 1111 action count'] = 0\n",
-      "/tmp/ipykernel_8592/3269018672.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/3269018672.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2517,7 +2517,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8592/817184100.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/817184100.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3452,7 +3452,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8592/11014329.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_11180/11014329.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -6934,7 +6934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "3fa3d0bf",
    "metadata": {},
    "outputs": [
@@ -7336,7 +7336,7 @@
        "[385 rows x 19 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7349,7 +7349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "ca950ccb",
    "metadata": {},
    "outputs": [
@@ -7763,7 +7763,7 @@
        "[385 rows x 20 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7776,7 +7776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "id": "759661fb",
    "metadata": {},
    "outputs": [
@@ -8202,7 +8202,7 @@
        "[385 rows x 21 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8216,7 +8216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "id": "6100bf1d",
    "metadata": {},
    "outputs": [
@@ -8655,7 +8655,7 @@
        "[385 rows x 22 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8677,7 +8677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "id": "a98a0f20",
    "metadata": {},
    "outputs": [
@@ -8934,7 +8934,7 @@
        "4988                                   0  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8950,7 +8950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "id": "bc113e5c",
    "metadata": {},
    "outputs": [
@@ -9376,7 +9376,7 @@
        "[385 rows x 25 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9397,7 +9397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "id": "a1249cd9",
    "metadata": {},
    "outputs": [
@@ -9754,7 +9754,7 @@
        "4988      11                                       0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9770,7 +9770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "id": "c3a9fbe3",
    "metadata": {},
    "outputs": [
@@ -10222,7 +10222,7 @@
        "[385 rows x 28 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10243,7 +10243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "id": "4366876d",
    "metadata": {},
    "outputs": [
@@ -10695,7 +10695,7 @@
        "[385 rows x 31 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10724,7 +10724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 63,
    "id": "b85e2750",
    "metadata": {},
    "outputs": [
@@ -11163,7 +11163,7 @@
        "[385 rows x 32 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11186,7 +11186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "id": "a740f16f",
    "metadata": {},
    "outputs": [
@@ -11625,7 +11625,7 @@
        "[385 rows x 33 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11646,7 +11646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 65,
    "id": "c85c11e3",
    "metadata": {},
    "outputs": [
@@ -12085,7 +12085,7 @@
        "[385 rows x 36 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12110,7 +12110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 66,
    "id": "b4bb46b6",
    "metadata": {},
    "outputs": [
@@ -12549,7 +12549,7 @@
        "[385 rows x 39 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12563,7 +12563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 67,
    "id": "c8087720",
    "metadata": {},
    "outputs": [
@@ -13662,7 +13662,7 @@
        "[31 rows x 39 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13677,7 +13677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 68,
    "id": "9f5d0b0c",
    "metadata": {},
    "outputs": [
@@ -14116,7 +14116,7 @@
        "[385 rows x 39 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14129,7 +14129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 69,
    "id": "19170ac7",
    "metadata": {},
    "outputs": [
@@ -14148,7 +14148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 70,
    "id": "43e789e4",
    "metadata": {},
    "outputs": [
@@ -14185,15 +14185,15 @@
        "      <th>merchant last week action count ratio</th>\n",
        "      <th>...</th>\n",
        "      <th>merchant_unknown_buy_ratio</th>\n",
-       "      <th>ageGroup_1_counts</th>\n",
-       "      <th>ageGroup_2_counts</th>\n",
-       "      <th>ageGroup_3_counts</th>\n",
-       "      <th>ageGroup_4_counts</th>\n",
-       "      <th>ageGroup_5_counts</th>\n",
-       "      <th>ageGroup_6_counts</th>\n",
-       "      <th>ageGroup_7_counts</th>\n",
-       "      <th>ageGroup_8_counts</th>\n",
-       "      <th>ageGroup_0_counts</th>\n",
+       "      <th>merchant_ageGroup_1_counts</th>\n",
+       "      <th>merchant_ageGroup_2_counts</th>\n",
+       "      <th>merchant_ageGroup_3_counts</th>\n",
+       "      <th>merchant_ageGroup_4_counts</th>\n",
+       "      <th>merchant_ageGroup_5_counts</th>\n",
+       "      <th>merchant_ageGroup_6_counts</th>\n",
+       "      <th>merchant_ageGroup_7_counts</th>\n",
+       "      <th>merchant_ageGroup_8_counts</th>\n",
+       "      <th>merchant_ageGroup_0_counts</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -14532,49 +14532,75 @@
        "383                               0.050704  ...                         0.0   \n",
        "384                               0.284507  ...                         0.0   \n",
        "\n",
-       "     ageGroup_1_counts  ageGroup_2_counts  ageGroup_3_counts  \\\n",
-       "0                    0                  2                  1   \n",
-       "1                    0                  2                  1   \n",
-       "2                    0                  2                  1   \n",
-       "3                    0                  2                  1   \n",
-       "4                    0                  2                  1   \n",
-       "..                 ...                ...                ...   \n",
-       "380                  0                 25                 24   \n",
-       "381                  0                 25                 24   \n",
-       "382                  0                 25                 24   \n",
-       "383                  0                 10                  0   \n",
-       "384                  0                 25                 24   \n",
+       "     merchant_ageGroup_1_counts  merchant_ageGroup_2_counts  \\\n",
+       "0                             0                           2   \n",
+       "1                             0                           2   \n",
+       "2                             0                           2   \n",
+       "3                             0                           2   \n",
+       "4                             0                           2   \n",
+       "..                          ...                         ...   \n",
+       "380                           0                          25   \n",
+       "381                           0                          25   \n",
+       "382                           0                          25   \n",
+       "383                           0                          10   \n",
+       "384                           0                          25   \n",
        "\n",
-       "     ageGroup_4_counts  ageGroup_5_counts  ageGroup_6_counts  \\\n",
-       "0                   10                  7                  8   \n",
-       "1                   10                  7                  8   \n",
-       "2                   10                  7                  8   \n",
-       "3                   10                  7                  8   \n",
-       "4                   10                  7                  8   \n",
-       "..                 ...                ...                ...   \n",
-       "380                 35                  1                  3   \n",
-       "381                 35                  1                  3   \n",
-       "382                 35                  1                  3   \n",
-       "383                  6                  0                  0   \n",
-       "384                 35                  1                  3   \n",
+       "     merchant_ageGroup_3_counts  merchant_ageGroup_4_counts  \\\n",
+       "0                             1                          10   \n",
+       "1                             1                          10   \n",
+       "2                             1                          10   \n",
+       "3                             1                          10   \n",
+       "4                             1                          10   \n",
+       "..                          ...                         ...   \n",
+       "380                          24                          35   \n",
+       "381                          24                          35   \n",
+       "382                          24                          35   \n",
+       "383                           0                           6   \n",
+       "384                          24                          35   \n",
        "\n",
-       "     ageGroup_7_counts  ageGroup_8_counts  ageGroup_0_counts  \n",
-       "0                    0                  0                  8  \n",
-       "1                    0                  0                  8  \n",
-       "2                    0                  0                  8  \n",
-       "3                    0                  0                  8  \n",
-       "4                    0                  0                  8  \n",
-       "..                 ...                ...                ...  \n",
-       "380                  0                  0                 17  \n",
-       "381                  0                  0                 17  \n",
-       "382                  0                  0                 17  \n",
-       "383                  0                  0                  2  \n",
-       "384                  0                  0                 17  \n",
+       "     merchant_ageGroup_5_counts  merchant_ageGroup_6_counts  \\\n",
+       "0                             7                           8   \n",
+       "1                             7                           8   \n",
+       "2                             7                           8   \n",
+       "3                             7                           8   \n",
+       "4                             7                           8   \n",
+       "..                          ...                         ...   \n",
+       "380                           1                           3   \n",
+       "381                           1                           3   \n",
+       "382                           1                           3   \n",
+       "383                           0                           0   \n",
+       "384                           1                           3   \n",
+       "\n",
+       "     merchant_ageGroup_7_counts  merchant_ageGroup_8_counts  \\\n",
+       "0                             0                           0   \n",
+       "1                             0                           0   \n",
+       "2                             0                           0   \n",
+       "3                             0                           0   \n",
+       "4                             0                           0   \n",
+       "..                          ...                         ...   \n",
+       "380                           0                           0   \n",
+       "381                           0                           0   \n",
+       "382                           0                           0   \n",
+       "383                           0                           0   \n",
+       "384                           0                           0   \n",
+       "\n",
+       "     merchant_ageGroup_0_counts  \n",
+       "0                             8  \n",
+       "1                             8  \n",
+       "2                             8  \n",
+       "3                             8  \n",
+       "4                             8  \n",
+       "..                          ...  \n",
+       "380                          17  \n",
+       "381                          17  \n",
+       "382                          17  \n",
+       "383                           2  \n",
+       "384                          17  \n",
        "\n",
        "[385 rows x 48 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14590,19 +14616,21 @@
     "ageGroup_6_counts = df.groupby(['seller_id'])['age_range'].apply(lambda x: (x == 6).sum())\n",
     "ageGroup_7_counts = df.groupby(['seller_id'])['age_range'].apply(lambda x: (x == 7).sum())\n",
     "ageGroup_8_counts = df.groupby(['seller_id'])['age_range'].apply(lambda x: (x == 8).sum())\n",
-    "gender_total_item_counts = pd.DataFrame({'ageGroup_1_counts': ageGroup_1_counts,'ageGroup_2_counts': ageGroup_2_counts,'ageGroup_3_counts': ageGroup_3_counts,'ageGroup_4_counts': ageGroup_4_counts,'ageGroup_5_counts': ageGroup_5_counts,\n",
-    "                                          'ageGroup_6_counts': ageGroup_6_counts,'ageGroup_7_counts': ageGroup_7_counts,'ageGroup_8_counts': ageGroup_8_counts, 'ageGroup_0_counts': ageGroup_0_counts})\n",
+    "gender_total_item_counts = pd.DataFrame({'merchant_ageGroup_1_counts': ageGroup_1_counts,'merchant_ageGroup_2_counts': ageGroup_2_counts,'merchant_ageGroup_3_counts': ageGroup_3_counts,'merchant_ageGroup_4_counts': ageGroup_4_counts,'merchant_ageGroup_5_counts': ageGroup_5_counts,\n",
+    "                                          'merchant_ageGroup_6_counts': ageGroup_6_counts,'merchant_ageGroup_7_counts': ageGroup_7_counts,'merchant_ageGroup_8_counts': ageGroup_8_counts, 'merchant_ageGroup_0_counts': ageGroup_0_counts})\n",
     "df_merchant = df_merchant.join(gender_total_item_counts, on='seller_id')\n",
     "df_merchant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "72a620a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_merchant.to_csv('merchant_profile.csv',index=False)"
+   ]
   },
   {
    "attachments": {},
