--- a/data_format1/User Profile.ipynb
+++ b/data_format1/User Profile.ipynb
@@ -1220,13 +1220,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10615/873788209.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/873788209.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_user['action count'] = -1\n",
-      "/tmp/ipykernel_10615/873788209.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/873788209.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1784,7 +1784,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10615/2569712461.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/2569712461.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2566,7 +2566,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10615/3681883862.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/3681883862.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3419,13 +3419,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10615/290636859.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/290636859.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_user['1111 action count'] = 0\n",
-      "/tmp/ipykernel_10615/290636859.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/290636859.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3636,7 +3636,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10615/1757874129.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/1757874129.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4641,7 +4641,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10615/602709202.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10903/602709202.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -10249,6 +10249,16 @@
    ],
    "source": [
     "print(sum(df_user.isna().sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1db3958b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_user.to_csv('user_profile.csv',index=False)"
    ]
   },
   {
